@@ -1,0 +1,20 @@
+[
+  {
+    "name": "bedrijventerrein",
+    "type": "voc",
+    "title" : "Bron Bedrijventerrein",
+    "eap": "OSLO-Bedrijventerrein-impl.eap",
+    "diagram": "OSLO-BedrijventerreinImplementatieModel",
+    "template": "bedrijventerrein-voc.j2",
+    "publication-state": "https://data.vlaanderen.be/id/concept/StandaardStatus/ErkendeStandaard",
+    "publication-date": "2022-04-05",
+    "license": "https://data.vlaanderen.be/id/licentie/modellicentie-gratis-hergebruik/v1.0",
+    "contributors-file": "stakeholders.csv",
+    "contributors-column": "bedrijventerrein",
+    "site": "site-skeleton/bedrijventerrein",
+    "feedbackurl": "https://github.com/Informatievlaanderen/bron-bedrijventerreinen/issues",
+    "standaardregisterurl": "",
+    "dependencies": [
+    ]
+  }
+]
