@@ -7,7 +7,7 @@
     "diagram": "OSLO-BedrijventerreinImplementatieModel",
     "template": "bedrijventerrein-impl.j2",
     "publication-state": "https://data.vlaanderen.be/id/concept/StandaardStatus/ErkendeStandaard",
-    "publication-date": "2021-04-01",
+    "publication-date": "2022-04-05",
     "license": "https://data.vlaanderen.be/id/licentie/modellicentie-gratis-hergebruik/v1.0",
     "contributors-file": "stakeholders.csv",
     "contributors-column": "bedrijventerrein",
