@@ -1,0 +1,8 @@
+{% extends "voc2.j2" %}
+
+{% block summary %}
+<p>Het vocabularium {{ metadata.title }} is uitbreiding van het vocabularium gebaseerd op <a href="https://data.vlaanderen.be/ns/bedrijventerrein">Bedrijventerrein</a>.
+Dit vocabularium kan uitgebreid en aangepast worden aan de noden van het implementatiemodel <a href="https://bedrijventerreinen.vlaanderen.be/doc/implementatiemodel/bedrijventerrein">Bron-Bedrijventerrein</a>.
+</p>
+{% endblock %}
+
